--- a/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
+++ b/src/app/service-page/components/service-page-about-offer/service-page-about-offer.component.scss
@@ -52,7 +52,7 @@
       line-height: 20px;
       color: #4E5051;
     }
-    .user-raiting-wrapp{
+    .user-rating-wrap{
       width: fit-content;
       text-align: right;
       position: relative;
@@ -67,7 +67,7 @@
         color: #99acb7;
       }
     }
-    .star-raiting{
+    .star-rating{
       margin: 10px 0 10px;
     }
     .onlineStatus{
