--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
@@ -80,7 +80,7 @@
         background: #659AF3;
         color: #fff;
       }
-      &.bref{
+      &.brief{
         border: 2px solid #707683;
       }
 
@@ -395,7 +395,7 @@
   }
 }
 
-.btn-ceckout{
+.btn-checkout{
   padding: 16px 25px;
   font-size: 14px;
   font-weight: 600;
@@ -411,7 +411,7 @@
   border: 1px solid #3C7EEA;
   color: #3C7EEA;
 }
-.btn-accept-ceckout{
+.btn-accept-checkout{
   width: auto;
   color: #fff;
   text-align: center;
