--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -46,7 +46,7 @@
               </div>
             </ng-container>
             <div class="extra-features__item" *ngIf="offerData.extra_changes.published">
-              <mat-checkbox class="extra-features__checkbox" formControlName="extraСhanges">
+              <mat-checkbox class="extra-features__checkbox" formControlName="extraChanges">
                 <div class="extra-features__text">
                   <span class="extra-features__title">Дополнительные правки</span>
                   <span class="extra-features__price">{{offerData.extra_changes.price}} UAH</span>
