--- a/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
+++ b/src/app/catalog-page/catalog-home-page/catalog-home-page.component.scss
@@ -17,7 +17,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.categorie{
+.category{
   margin: 0;
   list-style-type: none;
   padding: 20px 15px 0;
@@ -31,7 +31,7 @@
     color: #323c47;
     margin: 0 0 16px;
   }
-  .subcategorie-name{
+  .subcategory-name{
     margin-bottom: 12px;
     a{
       font-family: "Source Sans Pro";
