--- a/src/app/shared/modules/system-messages/system-messages.component.scss
+++ b/src/app/shared/modules/system-messages/system-messages.component.scss
@@ -25,7 +25,7 @@
   }
 }
 
-.notifications-wrapp{
+.notifications-wrap{
   // display: none;
   position: absolute;
   z-index: 9;
@@ -114,7 +114,7 @@
     color: #33596E;
     opacity: 0.5;
   }
-  .notification-delet{
+  .notification-delete{
     position: absolute;
     top: 13px;
     right: 17px;
