--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -23,7 +23,7 @@
   box-shadow: 0px 4px 4px rgba(128, 152, 213, 0.1);
   position: absolute;
   width: 100%;
-  top: 137px;
+  // top: 137px;
   &.sticky {
     position: fixed;
     top: 0;
@@ -183,7 +183,7 @@
       }
     }
   }
-  &__inProces {
+  &__inProcess {
     margin-top: 16px;
   }
   // &__awaiting {}
@@ -409,7 +409,7 @@
   }
 }
 
-.aducation{
+.education{
   margin-bottom: 35px;
   &__wrapper {
     display: flex;
@@ -522,7 +522,7 @@
   }
 }
 
-.raiting {
+.rating {
   margin-bottom: 30px;
   border-bottom: 1px solid #f1f2f4;
   &__wrapper {
@@ -552,7 +552,7 @@
     font-weight: 600;
     color: #707683;
   }
-  &__commnets {
+  &__comments {
     font-weight: normal;
     color: #99ACB7;
     line-height: 20px;
