--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -85,6 +85,6 @@
   </div>
 
   <div class="btn-options compare" (click)="goCompareTable()"> 
-    <span>Cравнить пакеты услуг</span>
+    <span>Сравнить пакеты услуг</span>
   </div>
 </div>
