--- a/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/catalog-page/catalog/catalog-items/catalog-items.component.html
@@ -21,7 +21,7 @@
 
         <p class="card-description__about" (click)="openOffer(offer.id)">{{offer.title}}</p>
         <div class="card-description__bottom">
-          <div class="card-description__level">{{offer.averageRaiting.averageMark}}</div>
+          <div class="card-description__level">{{offer.user.averageRating.freelancer.averageMark}}</div>
           <div class="card-description__comments"><a>({{offer.comments_count}} отзывов)</a></div>
           <a class="card-description__ava" [routerLink]="['/user', offer.user.id] | localize"><img *ngIf="offer.user.avatar" [src]="offer.user.avatar" alt="avatar">
           </a>
