--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -81,7 +81,7 @@
         <div class="about-offer__text" [innerHTML]="offerData.description"></div>
       </div>
 
-      <app-service-page-compare-table [offerData]="offerData" *ngIf="offerData" id="compare-table">
+      <app-service-page-compare-table [offerData]="offerData" *ngIf="offerData" id="compare-table" (checkoutState)="openCheckout($event)">
       </app-service-page-compare-table>
 
       <section class="offer-rating" id="rating"  *ngIf="[offerData.averageRating] != 0">
