--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -72,8 +72,8 @@
                   <label class="block-title" for="startEducation">Окончание
                   </label>
                   <mat-select name="endEducationMounth" id="endEducationMounth"
-                    [(ngModel)]="userSettings.additionalEducation[i].endStudyMounth">
-                    <ng-container *ngFor="let endStudyMounth of mounth">
+                    [(ngModel)]="userSettings.additionalEducation[i].endStudyMonth">
+                    <ng-container *ngFor="let endStudyMounth of month">
                       <mat-option [value]="endStudyMounth">{{ endStudyMounth }}</mat-option>
                     </ng-container>
                   </mat-select>
