--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
@@ -31,11 +31,9 @@
       overflow: hidden;
       cursor: pointer;
       img{
+        object-fit: cover;
         width: 100%;
-        height: auto;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+        height: 100%;
       }
     }
   }
@@ -145,6 +143,128 @@
           left: 4px;
           top: 50%;
           transform: translateY(-50%);
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1499px) {
+  .another-services{
+    margin-bottom: 40px;
+  }
+  .section-title{
+    margin-bottom: 25px;
+  }
+  .cards-list {
+    margin: 0 -15px 0;
+  }
+  .card {
+    width: calc(25% - 30px);
+    margin: 0 15px 15px;
+    &-preview {
+      &__bg {
+        height: 155px;
+      }
+    }
+    &-description {
+      padding: 10px;
+      height: 90px;
+      &__about{
+        font-size: 16px;
+        line-height: 20px;
+      }
+    }
+    &-bottom {
+      border: 1px solid #F4F7FC;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 11px;
+      &__like {
+        width: 20px;
+        height: 18px;
+        background-image: url(/assets/images/icons/not_liked.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        cursor: pointer;
+        &.liked{
+          background-image: url(/assets/images/icons/liked.png);
+        }
+      }
+      &__price {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        span {
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 20px;
+          padding-left: 13px;
+          position: relative;
+          &::before{
+            content: "$";
+            position: absolute;
+            left: 4px;
+            top: 50%;
+            transform: translateY(-50%);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1361px) {
+  .card {
+    &-preview {
+      &__bg {
+        height: 140px;
+      }
+    }
+    &-description {
+      padding: 10px;
+      &__about{
+        font-size: 14px;
+        line-height: 18px;
+      }
+    }
+    &-bottom {
+      border: 1px solid #F4F7FC;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 11px;
+      &__like {
+        width: 20px;
+        height: 18px;
+        background-image: url(/assets/images/icons/not_liked.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        cursor: pointer;
+        &.liked{
+          background-image: url(/assets/images/icons/liked.png);
+        }
+      }
+      &__price {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        span {
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 20px;
+          padding-left: 13px;
+          position: relative;
+          &::before{
+            content: "$";
+            position: absolute;
+            left: 4px;
+            top: 50%;
+            transform: translateY(-50%);
+          }
         }
       }
     }
