--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
@@ -376,4 +376,103 @@
   }
 }
 
+@media (max-width: 1499px) {
+  .tabs {
+    .tabs-top {
+      height: 43px;
+    }
+    .tab {
+      padding: 11px 0;
+      font-size: 14px;
+      line-height: 21px;
+    }
+    .tabContent {
+      padding: 25px 25px 20px;
+      .main-info {
+        .title-price {
+          margin-bottom: 12px;
+        }
+        p {
+          font-size: 16px;
+          line-height: 20px;
+        }
+        .changes-term {
+          margin-bottom: 15px;
+          span {
+            font-size: 18px;
+            &:first-child {
+              font-size: 16px;
+            }
+          }
+        }
+        .option-list {
+          margin-bottom: 20px;
+          li {
+            font-size: 16px;
+            margin-bottom: 8px;
+            &.active {
+              opacity: 1;
+            }
+          }
+        }
+        .title-price{
+          span{
+            font-size: 18px;
+          }
+        }
+      }
+      .extra-features{
+        .show-extra-features{
+          font-size: 13px;
+        }
+  
+        &__list{
+          padding: 0 15px 0;
+          margin: 0 -15px;
+          label{
+            width: 100%;
+          }
+          &.open{
+            max-height: 700px;
+            padding: 15px 15px 0;
+            margin: 0 -15px;
+          }
+        }
+        &__item{
+          margin-bottom: 0;
+        }
+  
+        &__text{
+          width: 100%;
+          margin-left: 0px;
+          padding-left: 10px;
+        }
+        &__title{
+          font-size: 14px;
+          line-height: 150%;
+          max-width: 210px;
+          white-space: normal;
+        }
+        &__price{
+          font-size: 14px;
+          line-height: 150%;
+        }
+      }
+    }  
+    .btn-order-service {
+      padding: 13px 0;
+      font-size: 14px;
+    }
+    .btn-options{
+      padding: 12px 0;
+    }
+  }
+  .btn-options{
+    font-size: 13px;
+    line-height: 162%;
+  }
+}
 
+// @media (max-width: 1499px) {
+
+// }
