--- a/src/app/service-page/components/service-page-questions/service-page-questions.component.scss
+++ b/src/app/service-page/components/service-page-questions/service-page-questions.component.scss
@@ -22,22 +22,14 @@
 .question-list {
   width: auto;
   margin: 0 auto;
-  // min-height: 440px;
   margin-bottom: 30px;
   border-radius: 6px;
   overflow: hidden;
 }
 .question-item {
-
   width: 100%;
   border-bottom: 1px solid #EBEEFF;
-
   background-color: #F4F7FC;
-  // &.mat-expanded{
-  //   .question-item__title{
-  //     padding: 7px 20px 0;
-  //   }
-  // }
   &__title {
     position: relative;
     font-style: normal;
@@ -48,16 +40,6 @@
     margin: 0;
     cursor: pointer;
     padding: 7px 20px 9px;
-    // &::before {
-    //   content: "";
-    //   position: absolute;
-    //   left: 14px;
-    //   top: 10px;
-    //   border: 6px solid transparent;
-    //   border-top: 6px solid #fff;
-    //   transition: all 0.3s;
-    // }
-
     .element-plus{
       color: #3a4046;
       position: absolute;
@@ -142,4 +124,18 @@
 }
 .mat-expansion-indicator::after{
   display: none!important;
+}
+
+@media (max-width: 1499px) {
+  .question-item {
+    &__title {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    &__text {
+      font-size: 16px;
+      line-height: 18px;
+    }
+
+  }
 }
